--- a/styles.css
+++ b/styles.css
@@ -3,11 +3,30 @@
     #title{
           text-align: center;
       }
+      .title-img{
+        width: 15%;
+        transform: rotate(0.00001deg);
+        position: absolute;
+        right: -2rem;
+        /* top: 66%; */
+        bottom: -33%;
+      }
+      
   
-    .title-image{
+    /* .title-image{
           position: static;
           transform: rotate(0);
       }
+
+      img.title-image {
+        width: 15%;
+        transform: rotate(0.00001deg);
+        position: absolute;
+        right: -2rem;
+        /* top: 66%; */
+        bottom: -33%;
+
+} */
   
   }
   
